2009-02-25  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomType.cs:
	* MonoDevelop.Projects.Dom/CompoundType.cs: Compound types now
	  have sourcedom set.

2009-02-25  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* md1format.xml:
	* MonoDevelop.Projects.csproj:
	* MonoDevelop.Projects/DotNetProject.cs:
	* MonoDevelop.Projects/ProjectParameters.cs:
	* MonoDevelop.Projects/LanguageBindingService.cs:
	* MonoDevelop.Projects/IDotNetLanguageBinding.cs:
	* MonoDevelop.Projects/ConfigurationParameters.cs:
	* MonoDevelop.Projects/DotNetProjectConfiguration.cs:
	* MonoDevelop.Projects/AbstractProjectConfiguration.cs:
	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs:
	  Added support for ProjectParameters in DotNetProject.
	  Language bindings can store project global settings there.
	  Added a new base class for configuration parameters and
	  project parameters.

2009-02-24  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs:
	* MonoDevelop.Projects.Dom.Output/AmbienceService.cs:
	* MonoDevelop.Projects.Dom.Serialization/DatabaseProjectDom.cs:
	  Fixed "Bug 472597 - New completion does not include array
	  types".

2009-02-23  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Extensions/ItemTypeCondition.cs: Moved
	  ItemTypeCondition from MD.Projects.Gui.

	* Makefile.am:
	* MonoDevelop.Projects.csproj: Updated.

	* MonoDevelop.Projects/IFileItem.cs:
	* MonoDevelop.Projects/ProjectFile.cs:
	* MonoDevelop.Projects/IFolderItem.cs:
	* MonoDevelop.Projects/IWorkspaceObject.cs: Added new
	  IFileItem and IFolderItem interfaces, which are used by the
	  ide (e.g. by the solution pad) to provide generic operations
	  on files and folders.

2009-02-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomMethod.cs:
	* MonoDevelop.Projects.Dom/DomReturnType.cs:
	* MonoDevelop.Projects.Dom/ResolveResult.cs:
	* MonoDevelop.Projects.Dom/ExpressionContext.cs: